--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,6 @@
 DB_USER=root
-DB_HOST=dpg-cv0u0c2j1k6c73apde00-a.singapore-postgres.render.com
-DB_NAME=taskflow_21nu
-DB_PASSWORD=jKGmYJKPMMmwD0lLjlW796jstHc44wYa
+DB_HOST=dpg-cvlcc17fte5s73e4lq30-a.oregon-postgres.render.com
+DB_NAME=taskflowdb_yfua
+DB_PASSWORD=qHllIonrpQNcWCbhOmmc8nRSnb13DIki
 DB_PORT=5432
 JWT_SECRET=fallback_secret_key
