--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,6 @@
 DB_USER=root
-DB_HOST=dpg-cvlcc17fte5s73e4lq30-a.oregon-postgres.render.com
-DB_NAME=taskflowdb_yfua
-DB_PASSWORD=qHllIonrpQNcWCbhOmmc8nRSnb13DIki
+DB_HOST=dpg-d092fh3ipnbc73fsol9g-a.oregon-postgres.render.com
+DB_NAME=taskflowdb_nlkx
+DB_PASSWORD=Pqw5ECWraK0hnZfNZhkaFuOnzI6pB4BR
 DB_PORT=5432
 JWT_SECRET=fallback_secret_key
