--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USER=root
-DB_HOST=dpg-d092fh3ipnbc73fsol9g-a.oregon-postgres.render.com
-DB_NAME=taskflowdb_nlkx
-DB_PASSWORD=Pqw5ECWraK0hnZfNZhkaFuOnzI6pB4BR
+DB_HOST=dpg-d0uvv9umcj7s73cq7jg0-a.oregon-postgres.render.com
+DB_NAME=taskflowdb_y03e
+DB_PASSWORD=MQwZkUmuK92ieGVmmjMoNmk5Us0ewKwc
 DB_PORT=5432
 JWT_SECRET=fallback_secret_key
